--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
 
-    <title>Vite + React + TS</title>
+    <title>NLW E-sports</title>
   </head>
   <body class="bg-[#121214] bg-galaxy bg-cover bg-no-repeat">
     <div id="root"></div>
